# lnkdump2000

./: CMakeLists.txt  Containerfile  README  about.ui  blank.ui  buildah.sh  config.h.in  enc_asian.inc  enc_single.inc  encoding.cpp  encoding.h  linuxdeploy.fish  lnk.ui  lnkdump2k.desktop  lnkdumpicon.kra  main.cpp  main.h  output.cpp  output.h  parse.cpp  parse.h  struct.cpp  struct.h  themes.cpp  themes.h
